# llm_pack_service

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  model_config.ini  pyproject.toml  pyrightconfig.json
src/: service.py  test.py
src/llm_pack_service/: __init__.py  __main__.py  pack_service.py  utils.py
src/llm_pack_service/apis/: audio.py  chat.py  error.py  image.py  image2image.py  nonstream.py  out_painting.py  outpainting.py  streamable.py  text2image.py  utils.py
static/: text_01.txt
test/: create_mp3.py  simplex_websocket_demo.py  simplex_websocket_demo_stream.py  streaming_asr_deme.py
