[project]
name = "llm-pack-service"
version = "0.1.3"
description = "integrate the apis of different llm to one api, which means: large language model package service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "configparser>=7.2.0",
    "fastapi>=0.95.0", # StreamingResponse was introduced in 0.95.0
    "httpx>=0.28.1",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "uuid>=1.30",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
llm-pack = "llm_pack_service.pack_service:main"

