[project]
name = "llm-pack-service"
version = "0.1.4"
description = "integrate the apis of different llm to one api, which means: large language model package service"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "zhaofei", email = "329362855@qq.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["llm", "api", "fastapi"]
dependencies = [
    "asyncio>=3.4.3",
    "configparser>=7.2.0",
    "docx>=0.2.4",
    "fastapi>=0.95.0", # StreamingResponse was introduced in 0.95.0
    "httpx>=0.28.1",
    "markdown>=3.8.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "websockets>=15.0.1",
    "uvicorn>=0.34.2",
    "uv>=0.7.14",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.0",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
llm-pack = "llm_pack_service.pack_service:main"
